--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,9 @@ img{max-width:100%;}
 
 body {
     font-family: 'Jura', sans-serif;
-    background:#0a4981;
+    background-color:#0a4981;
+    background-image: url(../images/Milky_Way_IR_Spitzer.jpg);
+    background-size: cover;
 }
 h1 {
     color: #fff;
@@ -34,27 +36,27 @@ h1 {
 .main {
     margin: 4em auto;
     width: 50%;
+    display: flex;
+    flex-wrap: wrap;
 }
 .banner {
-    background: url(../images/banner.jpg)no-repeat 0px 0px;
-    background-size: cover;
+  margin-top: 35px;
+  height: 100px;
 }
 
 
-.w3 {
-    float: left;
-    width: 48%;
-    margin-right: 4%;
-}
-.agile {
-    float: right;
-    width: 48%;
-}
 .signin-form {
-    background: url(../images/banner1.jpg)no-repeat 0px 0px;
+    background: rgba(0, 0, 0, 0.8);
     background-size: cover;
     padding: 2em 2em;
-	text-align: center;
+    text-align: center;
+    width: 48%;
+    flex: 1;
+    box-shadow: 0px 2px 1px rgba(28, 28, 29, 0.42);
+    border-radius: 22px;
+}
+.signin-form.login {
+    margin-right: 4%;
 }
 .signin-form h3 {
     font-size: 2em;
@@ -72,16 +74,36 @@ h1 {
     margin: 1em 0 2.5em;
 }
 .signin-form input[type="text"], .signin-form input[type="password"] {
-    width: 92%;
+    color: #FFF;
+    width: 100%;
     padding: 1em 1em 1em 1em;
     font-size: 0.8em;
     margin: 1em 0;
     outline: none;
-    color: #FFF;
     border: none;
     border-bottom: 2px solid #fff;
 	letter-spacing: 1px;
 	text-align:center;
+}
+.signin-form input[type="text"]:focus, .signin-form input[type="password"]:focus {
+    background-color: #FFF;
+    color: #000;
+    transition: .5s all;
+    -webkit-transition: .5s all;
+    -moz-transition: .5s all;
+    -o-transition: .5s all;
+    -ms-transition: .5s all;
+}
+.signin-form input[type="text"]::-webkit-input-placeholder, .signin-form input[type="password"]::-webkit-input-placeholder {
+    color: #FFF;
+}
+.signin-form input[type="text"]:focus::-webkit-input-placeholder, .signin-form input[type="password"]:focus::-webkit-input-placeholder {
+    color: rgba(0, 0, 0, 0.3);
+    transition: .5s all;
+    -webkit-transition: .5s all;
+    -moz-transition: .5s all;
+    -o-transition: .5s all;
+    -ms-transition: .5s all;
 }
 .signin-form input[type="text"] {
     background: none;
@@ -90,9 +112,6 @@ h1 {
 .signin-form input[type="password"] {
      background: none;
     display: block;
-}
-::-webkit-input-placeholder{
-	color:#fff !important;
 }
 .signin-form input[type="submit"] {
     outline: none;
@@ -257,18 +276,16 @@ h1 {
 .main {
     width: 51%;
 }
-.w3 {
-    float: none;
-    width: 100%;
-    margin-right: 0;
-    margin-bottom: 5%;
-}
-.agile {
-    float: none;
-    width: 100%;
+
+.signin-form {
+  flex-basis: 100%;
 }
 .signin-form p a {
     line-height: 1.8em;
+}
+.signin-form.login {
+    margin-right: 0%;
+    margin-bottom: 5%;
 }
 }
 @media(max-width:768px){
@@ -311,9 +328,7 @@ h1 {
 .header-social a.goog {
     width: 21%;
 }
-.w3 {
-    margin-bottom: 0%;
-}
+
 .signin-form input[type="text"], .signin-form input[type="password"] {
     width: 91%;
 }
